  to generate custom filenames. [Peter]
+ atkMetaNode now recognizes $filter var for setting a default filter. [Peter]
+ Bundled 'prototype window' class library. [Lineke]
+ Added AF_BOOL_OBLIGATORY flag to force AF_OBLIGATORY behaviour on
  atkBoolAttributes. [Peter]  
+ Added setPostvars function to the atkActionHandler class. [Sandy]
+ Added min/max-date functions for atkDateTimeAttribute [Jeroen]
* Security: Fixed cross-site scripting (xss) vulnerability in Login screen and 
  any other screen that made use of the makeHiddenPostvars method. (bug #697) 
  [Ivo]
* Bugfix in atknode, atkmlsplitter and atkManyToOneRelation
  (m_joinaliases removed from the code) [Sandy, Peter]
* Bugfix in atkImportHandler (in_array takes 2 params, not 1). [Harrie]
* Fixed minor html/4.01 transitional compatibility issue in atkPage. [Guido]
* A password should only be generated if a username is given. [Guido]
* Added the auth_enablepasswordmailer var to the template so login,tpl
  can now detect if it should show the Password forgotten button. [Guido]
* Replaced tbsooo's meth_misc_alert calls by atkerror statements to
  improve debugging. [Guido]
* Fixed bug in tbsooo which caused the SaveXmlToDoc function to fail due to
  the -u option in the zip command (thanks Dennis-Jan for pointing me into
  this direction). [Guido]
* Fixed bug in atkMssqlQuery, it no longer has an ambiguous column error
  when fields in an atkManyToOneRelation have the same name as fields in
  the master node. [Ivo]
* Fixed the atkFormatAttribute, it can now handle multiple delimiters. [Ivo]
* When encountering data that doesn't match the format in atkFormatAttribute,
  the expected format is now displayed in the error message. [Ivo]
* Fixed the login image of the macoslike theme. [Ivo]
* Bugfix: filenames need to be escaped before they are added to the db in
  the atkFileAttribute. [Sandy]
* When an atkFileAttribute is obligatory but somehow empty and no new file