@@ -83,6 +83,8 @@ Changed in ATK 5.7
 + Added AF_BOOL_OBLIGATORY flag to force AF_OBLIGATORY behaviour on
   atkBoolAttributes. [Peter]  
 + Added setPostvars function to the atkActionHandler class. [Sandy]
++ The theme engine now recognizes custom action_[action].tpl template files.
+  If they do not exist, the default action.tpl template is used. [Ivo]
 + Added min/max-date functions for atkDateTimeAttribute [Jeroen]
 * Security: Fixed cross-site scripting (xss) vulnerability in Login screen and 
   any other screen that made use of the makeHiddenPostvars method. (bug #697) 
@@ -300,6 +302,8 @@ Changed in ATK 5.7
 * Updated Dutch translation. [Guido]
 - Temporarily removed the 'generate title row' checkbox in atkExportHandler as
   it isn't yet implemented. [Guido]
+- Removed default theme's action_view.tpl as it basically is no difference 
+  than the default action.tpl. [Ivo]
 
 
 Changed in ATK 5.6
